Directory structure changes

--- a/lib/templates/vagrantbase.erb
+++ b/lib/templates/vagrantbase.erb
@@ -17,6 +17,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     <% end %>
     <%= systems.id %>.vm.synced_folder "<%= MOUNT_DIR %>", "/mount"
     end
+    config.vm.provision :shell, :inline => "sed -i 's/squeeze/wheezy/g' /etc/apt/sources.list"
     config.vm.provision :shell, :inline => "apt-get update --fix-missing"
 
 
@@ -28,19 +29,20 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     #a vulnerability has 1 or many puppets
     <% systems.vulns.each do |vulnerability| %>
 
-        <% vulnerability.puppets.each do |puppet| %>
             <% vulnerability_name = vulnerability.name %>
             config.vm.provision "puppet" do | <%=vulnerability_name%> |
-            <%=vulnerability_name%>.manifests_path= "<%="#{vulnerability.puppet_path}/manifest" %>"
+
+            <%=vulnerability_name%>.module_path = "<%="#{ROOT_DIR}/mount/puppet/module/#{vulnerability_name}"%>"
+            <%=vulnerability_name%>.manifests_path = "<%="#{ROOT_DIR}/mount/puppet/manifest"%>"
             <%=vulnerability_name%>.manifest_file = "<%=vulnerability_name%>.pp"
             end
-        <% end %>
+
     <% end %>
 
     # clean up script which clears history from the VMs and clobs files together
     config.vm.provision "puppet" do |cleanup|
-    cleanup.module_path = "<%="#{PATH_TO_CLEANUP}module"%>"
-    cleanup.manifests_path = "<%="#{PATH_TO_CLEANUP}manifest"%>"
+    cleanup.module_path = "<%="#{ROOT_DIR}/modules/build/puppet/cleanup/module"%>"
+    cleanup.manifests_path = "<%="#{ROOT_DIR}/modules/build/puppet/cleanup"%>"
     cleanup.manifest_file = "cleanup.pp"
     end
 
