Relates to SG-11 : Pushes code to repo for Tom to branch from

--- a/lib/templates/vagrantbase.erb
+++ b/lib/templates/vagrantbase.erb
@@ -24,13 +24,13 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     # Add secure services
     <% systems.services.each do |service| %>
 
-        <% service_name = service.name.gsub!('-', '_').gsub!('.', '_') %>
+        <% service_name = service.name%>
 
         config.vm.provision "puppet" do | <%=service_name%> |
 
-        <%=service_name%>.module_path = "<%="#{ROOT_DIR}/mount/puppet/module/#{service_name}"%>"
+        <%=service_name%>.module_path = "<%="#{ROOT_DIR}/mount/puppet/module"%>"
         <%=service_name%>.manifests_path = "<%="#{ROOT_DIR}/mount/puppet/manifest"%>"
-        <%=service_name%>.manifest_file = "init.pp"
+        <%=service_name%>.manifest_file = "<%=service_name%>.pp"
         end
 
     <% end %>
@@ -43,7 +43,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
             <% vulnerability_name = vulnerability.name %>
             config.vm.provision "puppet" do | <%=vulnerability_name%> |
 
-            <%=vulnerability_name%>.module_path = "<%="#{ROOT_DIR}/mount/puppet/module/#{vulnerability_name}"%>"
+            <%=vulnerability_name%>.module_path = "<%="#{ROOT_DIR}/mount/puppet/module"%>"
             <%=vulnerability_name%>.manifests_path = "<%="#{ROOT_DIR}/mount/puppet/manifest"%>"
             <%=vulnerability_name%>.manifest_file = "<%=vulnerability_name%>.pp"
             end
@@ -52,8 +52,8 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
     # clean up script which clears history from the VMs and clobs files together
     config.vm.provision "puppet" do |cleanup|
-    cleanup.module_path = "<%="#{ROOT_DIR}/modules/build/puppet/cleanup/module"%>"
-    cleanup.manifests_path = "<%="#{ROOT_DIR}/modules/build/puppet/cleanup"%>"
+    cleanup.module_path = "<%="#{ROOT_DIR}/mount/puppet/module"%>"
+    cleanup.manifests_path = "<%="#{ROOT_DIR}/mount/puppet/manifest"%>"
     cleanup.manifest_file = "cleanup.pp"
     end
 
