Added extra command line options to modify generated vms, need to be separated into a ruby class to ensure max values are not set (max ram larger then system ram) and to make sure that large ruby blocks are not in Vagrantfile.erb. Options added are: --memory-per-vm --total-memory --max-cpu-cores --max-cpu-usage

--- a/lib/templates/Vagrantfile.erb
+++ b/lib/templates/Vagrantfile.erb
@@ -12,16 +12,15 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.define "<%= system.name %>" do |<%= system.name %>|
     # REMOVE: < %= system.name %>.vm.synced_folder "< %= MOUNT_DIR %>", "/mount"
     config.vm.provider :virtualbox do |vb|
-     <%=
-      if @gui_output == true
-       "vb.gui = true"
-      else
-       "vb.gui = false"
-       "vb.customize ['modifyvm', :id, '--pae', 'on']"
-       "vb.customize ['modifyvm', :id, '--hwvirtex', 'off']"
-       "vb.customize ['modifyvm', :id, '--vtxvpid', 'off']"
-      end
-     %>
+      <%= (@options.has_key? :gui_output && @options[:gui_output])?"vb.gui = true":"
+      vb.gui = false
+      vb.customize ['modifyvm', :id, '--pae', 'on']
+      vb.customize ['modifyvm', :id, '--hwvirtex', 'off']
+      vb.customize ['modifyvm', :id, '--vtxvpid', 'off']" %>
+      <%= (@options.has_key? :memory_per_vm)?"vb.memory = #{@options[:memory_per_vm]}":"vb.memory = 512" %>
+      <%= (@options.has_key? :total_memory)?"vb.memory = #{@options[:total_memory]}/#{@systems.length}":"vb.memory = 512" %>
+      <%= (@options.has_key? :max_cpu_cores)?"vb.cpus = #{@options[:max_cpu_cores]}":"vb.cpus = 4" %>
+      <%= (@options.has_key? :max_cpu_usage)?"vb.customize ['modifyvm', :id, '--cpuexecutioncap', '#{@options[:max_cpu_usage]}']":"vb.customize ['modifyvm', :id, '--cpuexecutioncap', '100']" %>
     end
     # SecGen modules
 <% system.module_selections.each do |selected_module| -%>
