--- a/lib/templates/Vagrantfile.erb
+++ b/lib/templates/Vagrantfile.erb
@@ -12,15 +12,32 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.define "<%= system.name %>" do |<%= system.name %>|
     # REMOVE: < %= system.name %>.vm.synced_folder "< %= MOUNT_DIR %>", "/mount"
     config.vm.provider :virtualbox do |vb|
-      <%= (@options.has_key? :gui_output && @options[:gui_output])?"vb.gui = true":"
+      <%=
+        if (@options.has_key? :gui_output)
+          "vb.gui = true"
+        else "
       vb.gui = false
       vb.customize ['modifyvm', :id, '--pae', 'on']
       vb.customize ['modifyvm', :id, '--hwvirtex', 'off']
-      vb.customize ['modifyvm', :id, '--vtxvpid', 'off']" %>
-      <%= (@options.has_key? :memory_per_vm)?"vb.memory = #{@options[:memory_per_vm]}":"vb.memory = 512" %>
-      <%= (@options.has_key? :total_memory)?"vb.memory = #{@options[:total_memory]}/#{@systems.length}":"vb.memory = 512" %>
-      <%= (@options.has_key? :max_cpu_cores)?"vb.cpus = #{@options[:max_cpu_cores]}":"vb.cpus = 4" %>
-      <%= (@options.has_key? :max_cpu_usage)?"vb.customize ['modifyvm', :id, '--cpuexecutioncap', '#{@options[:max_cpu_usage]}']":"vb.customize ['modifyvm', :id, '--cpuexecutioncap', '100']" %>
+      vb.customize ['modifyvm', :id, '--vtxvpid', 'off']"
+        end %>
+      <%=
+        if (@options.has_key? :memory_per_vm)
+          "vb.memory = #{@options[:memory_per_vm]}"
+        elsif (@options.has_key? :total_memory)
+          "vb.memory = #{@options[:total_memory]}/#{@systems.length}"
+        end
+      %>
+      <%=
+        if (@options.has_key? :max_cpu_cores)
+          "vb.cpus = #{@options[:max_cpu_cores]}"
+        end
+      %>
+      <%=
+        if (@options.has_key? :max_cpu_usage)
+            "vb.customize ['modifyvm', :id, '--cpuexecutioncap', '#{@options[:max_cpu_usage]}']"
+        end
+      %>
     end
     # SecGen modules
 <% system.module_selections.each do |selected_module| -%>
