cleanup Vagrantfile output

--- a/lib/templates/Vagrantfile.erb
+++ b/lib/templates/Vagrantfile.erb
@@ -12,32 +12,25 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 <% @systems.each do |system| %>
   config.vm.define "<%= system.name %>" do |<%= system.name %>|
     config.vm.provider :virtualbox do |vb|
-      <%=
-        if (@options.has_key? :gui_output)
-          "vb.gui = true"
-        else "
-      vb.gui = false
+<%= if (@options.has_key? :gui_output)
+"      vb.gui = true"
+    else
+"      vb.gui = false
       vb.customize ['modifyvm', :id, '--pae', 'on']
       vb.customize ['modifyvm', :id, '--hwvirtex', 'off']
       vb.customize ['modifyvm', :id, '--vtxvpid', 'off']"
-        end %>
-      <%=
-        if (@options.has_key? :memory_per_vm)
-          "vb.memory = #{@options[:memory_per_vm]}"
-        elsif (@options.has_key? :total_memory)
-          "vb.memory = #{@options[:total_memory]}/#{@systems.length}"
-        end
-      %>
-      <%=
-        if (@options.has_key? :max_cpu_cores)
-          "vb.cpus = #{@options[:max_cpu_cores]}"
-        end
-      %>
-      <%=
-        if (@options.has_key? :max_cpu_usage)
-            "vb.customize ['modifyvm', :id, '--cpuexecutioncap', '#{@options[:max_cpu_usage]}']"
-        end
-      %>
+    end -%>
+<%= if (@options.has_key? :memory_per_vm)
+"      vb.memory = #{@options[:memory_per_vm]}"
+    elsif (@options.has_key? :total_memory)
+"      vb.memory = #{@options[:total_memory]}/#{@systems.length}"
+    end -%>
+<%= if (@options.has_key? :max_cpu_cores)
+"      vb.cpus = #{@options[:max_cpu_cores]}"
+    end -%>
+<%= if (@options.has_key? :max_cpu_usage)
+"      vb.customize ['modifyvm', :id, '--cpuexecutioncap', '#{@options[:max_cpu_usage]}']"
+    end %>
     end
 
     # SecGen modules
