--- a/lib/templates/Puppetfile.erb
+++ b/lib/templates/Puppetfile.erb
@@ -9,6 +9,7 @@
 forge "https://forgeapi.puppetlabs.com"
 
 mod 'puppetlabs-stdlib'  # stdlib enables parsejson() in manifests and other useful functions
+mod 'SecGen-secgen_functions', :path => '<%= SECGEN_FUNCTIONS_PUPPET_DIR %>'
 
 <% @currently_processing_system.module_selections.each do |selected_module| -%>
 <%   case selected_module.module_type
