--- a/lib/templates/Vagrantfile.erb
+++ b/lib/templates/Vagrantfile.erb
@@ -33,6 +33,9 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     end %>
     end
 
+    # SecGen datastore
+    # <%= JSON.generate($datastore) %>
+
     # SecGen modules
 <% system.module_selections.each do |selected_module| -%>
 
