--- a/modules/services/unix/smb/samba/templates/smb_share.conf.erb
+++ b/modules/services/unix/smb/samba/templates/smb_share.conf.erb
@@ -1,16 +1,28 @@
 <%require 'json' -%>
 <%$parsed_inputs = JSON.parse(@json_inputs)
   $share_name = $parsed_inputs['share_name'].first
+  $share_comment = $parsed_inputs['share_comment'].first
   $storage_directory = $parsed_inputs['storage_directory'].first
   $raw_read_only_share = $parsed_inputs['read_only_share'].first
   $raw_guests_allowed = $parsed_inputs['guests_allowed'].first
-  $read_only_share = $raw_read_only_share ? 'yes' : 'no' # convert boolean to 'yes' or 'no'
-  $guests_allowed = $raw_guests_allowed ? 'yes' : 'no'-%>
+  $read_only_share = $raw_read_only_share == 'true' ? 'yes' : 'no' # convert boolean to 'yes' or 'no'
+  $guests_allowed = $raw_guests_allowed  == 'true' ? 'yes' : 'no'
+  $storage_directory = '/tmp' if @symlink_traversal
+
+  # Team Project overrides
+  if $parsed_inputs['business_domain']
+    $split_business_domain = $parsed_inputs['business_domain'][0].split('.')
+    $share_name = $split_business_domain[0] + '_public_share' # strip domain tld
+  end
+
+  if $parsed_inputs['business_name']
+    $share_comment =  $parsed_inputs['business_name'].first + ' Public SMB Share'
+  end -%>
 #
 # Share definition
 #
 [<%=$share_name%>]
-comment = Public Share
+comment = <%=$share_comment%>
 # Path to directory
 path = <%=$storage_directory%>
 # Allow writing to share
