--- a/lib/templates/Vagrantfile.erb
+++ b/lib/templates/Vagrantfile.erb
@@ -14,12 +14,28 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.define "<%= system.name %>" do |<%= system.name %>|
     config.vm.provider :virtualbox do |vb|
 <%= if (@options.has_key? :gui_output)
-"      vb.gui = true"
+"      vb.gui = true
+"
     else
 "      vb.gui = false
-      vb.customize ['modifyvm', :id, '--pae', 'on']
-      vb.customize ['modifyvm', :id, '--hwvirtex', 'off']
-      vb.customize ['modifyvm', :id, '--vtxvpid', 'off']"
+"
+    end -%>
+<%= if (@options.has_key? :nopae)
+"      vb.customize ['modifyvm', :id, '--pae', 'off']"
+    else
+"      vb.customize ['modifyvm', :id, '--pae', 'on']"
+    end -%>
+
+<%= if (@options.has_key? :hwvirtex)
+"      vb.customize ['modifyvm', :id, '--hwvirtex', 'on']"
+    else
+"      vb.customize ['modifyvm', :id, '--hwvirtex', 'off']"
+    end -%>
+
+<%= if (@options.has_key? :vtxvpid)
+"      vb.customize ['modifyvm', :id, '--vtxvpid', 'on']"
+    else
+"      vb.customize ['modifyvm', :id, '--vtxvpid', 'off']"
     end -%>
 <%= if (@options.has_key? :memory_per_vm)
 "      vb.memory = #{@options[:memory_per_vm]}"
