--- a/modules/services/unix/nfs/nfs_share/templates/exports.erb
+++ b/modules/services/unix/nfs/nfs_share/templates/exports.erb
@@ -1,9 +1,10 @@
+<% $storage_directory = @secgen_parameters['storage_directory'].first -%>
 # /etc/exports: the access control list for filesystems which may be exported
 #               to NFS clients.  See exports(5).
 #
 # Example for NFSv2 and NFSv3:
- /export_nfs       172.0.0.0/8(ro,sync,no_subtree_check)
- /export_nfs       192.0.0.0/8(ro,sync,no_subtree_check)
+ <%= $storage_directory %>      172.0.0.0/8(ro,sync,no_subtree_check)
+ <%= $storage_directory %>      192.0.0.0/8(ro,sync,no_subtree_check)
 #
 # Example for NFSv4:
 # /srv/nfs4        gss/krb5i(rw,sync,fsid=0,crossmnt,no_subtree_check)
