--- a/modules/services/unix/http/parameterised_website/templates/subtemplates/header.html.erb
+++ b/modules/services/unix/http/parameterised_website/templates/subtemplates/header.html.erb
@@ -3,7 +3,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title><%= @business_name %> - <%=$current_page %></title>
+  <title><%= @business_name + ' - '%><%= $current_page %></title>
 
   <!-- Default stylesheet -->
   <link rel="stylesheet" type="text/css" href="css/default.css"/>
