--- a/modules/services/unix/http/parameterised_website/templates/subtemplates/navbar.html.erb
+++ b/modules/services/unix/http/parameterised_website/templates/subtemplates/navbar.html.erb
@@ -9,7 +9,7 @@
           <% if @security_audit -%>
           <li><a href="security_audit_remit.html">Security Audit Remit</a></li>
           <% end -%>
-          <% if @security_audit -%>
+          <% if @acceptable_use_policy -%>
           <li><a href="acceptable_use_policy.html">Acceptable Use Policy</a></li>
           <% end -%>
         </ul>
